--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 4.0.0)
+cmake_minimum_required(VERSION 3.31.0)
 project(vulkan_beginner)
 
 # Configuration
@@ -14,9 +14,10 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-set(DEBUG_GCC_COMPILER_FLAGS "-DVALIDATION_LAYERS -DDEBUG -g3 -O0 -fsanitize=address -fstack-protector-all -fno-omit-frame-pointer -fno-optimize-sibling-calls")
-set(RELEASE_GCC_COMPILER_FLAGS "-DNDEBUG -g0 -O3")
-set(CMAKE_C_FLAGS "${CXX_CLANG_SANITIZE} -std=c99")
+set(COMPILLER_COMMON_FLAGS "-fPIC -Wall -Wpedantic -Werror -pedantic-errors -Wno-format-security -Wno-unused-label")
+set(DEBUG_GCC_COMPILER_FLAGS "${COMPILLER_COMMON_FLAGS} -DVALIDATION_LAYERS -DDEBUG -g3 -O0 -fsanitize=address -fstack-protector-all -fno-omit-frame-pointer -fno-optimize-sibling-calls")
+set(RELEASE_GCC_COMPILER_FLAGS "${COMPILLER_COMMON_FLAGS} -DNDEBUG -g0 -O3")
+set(CMAKE_C_FLAGS "-std=c99")
 set(CMAKE_C_FLAGS_DEBUG ${DEBUG_GCC_COMPILER_FLAGS})
 set(CMAKE_C_FLAGS_RELEASE ${RELEASE_GCC_COMPILER_FLAGS})
 set(CMAKE_CXX_FLAGS_DEBUG ${DEBUG_GCC_COMPILER_FLAGS})
@@ -42,7 +43,7 @@ if (NOT Vulkan_glslangValidator_FOUND)
     message(FATAL_ERROR "Vulkan GLSL validator is not found")
 endif()
 
-add_executable(vulkan_beginner beginner.c)
+add_executable(vulkan_beginner beginner.c /usr/include/volk.c)
 
 # Include directories for the Vulkan and Vulkan validation layers
 # libraries
@@ -65,7 +66,6 @@ target_include_directories(vulkan_beginner PRIVATE
 # the Vulkan and Vulkan validation layers libraries will be linked
 # against the vulkan_beginner target, but will not be propagated to any
 # other targets that depend on the vulkan_beginner target.
-target_link_libraries(vulkan_beginner PRIVATE 
-    ${Vulkan_volk_LIBRARY}
+target_link_libraries(vulkan_beginner PRIVATE  
     ${SDL2_LIBRARIES}
 )
