Add shaders compilation step

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ set(CMAKE_CXX_FLAGS_DEBUG ${DEBUG_GCC_COMPILER_FLAGS})
 set(CMAKE_CXX_FLAGS_RELEASE ${RELEASE_GCC_COMPILER_FLAGS})
 add_definitions(-D${PLATFORM_TYPE})
 
-find_package(Vulkan COMPONENTS glslc glslangValidator volk)
+find_package(Vulkan COMPONENTS glslc volk)
 find_package(SDL2 REQUIRED)
 
 if (NOT Vulkan_FOUND)
@@ -75,3 +75,38 @@ target_include_directories(vulkan_beginner PRIVATE
 target_link_libraries(vulkan_beginner PRIVATE  
     ${SDL2_LIBRARIES}
 )
+
+set(SHADERS_DIR ${CMAKE_SOURCE_DIR}/shaders)
+set(SHADERS_OUTPUT_DIR ${CMAKE_BINARY_DIR}/shaders/)
+set(SHADERS_SOURCES ${SHADERS_DIR}/base.vert ${SHADERS_DIR}/base.frag)
+set(SHADERS_BINARIES ${CMAKE_BINARY_DIR}/shaders/base.vert.spv ${CMAKE_BINARY_DIR}/shaders/base.frag.spv)
+
+# Compile the shaders with glslc
+#
+# We use a custom command to compile the shaders with glslc. The
+# command takes the shader sources as input and generates the
+# compiled shaders as output. The command is executed in the
+# SHADERS_OUTPUT_DIR directory.
+#
+# We add a dependency between the vulkan_beginner target and the
+# shaders_compilation custom target. This means that the
+# vulkan_beginner target will be rebuilt whenever the shaders change.
+add_custom_command(
+    OUTPUT ${SHADERS_BINARIES}
+    COMMAND Vulkan::glslc
+    ARGS -c ${SHADERS_SOURCES} -Werror
+    WORKING_DIRECTORY ${SHADERS_OUTPUT_DIR}
+    DEPENDS ${SHADERS_DIR} ${SHADERS_SOURCES}
+    COMMENT "Compiling Shaders"
+    VERBATIM
+)
+
+# Add a custom target that depends on the compiled shaders
+#
+# This target does not generate any output and only serves as a
+# dependency for the vulkan_beginner target.
+add_custom_target(shaders_compilation DEPENDS ${SHADERS_BINARIES})
+
+# Add a dependency between the vulkan_beginner target and the
+# shaders_compilation custom target
+add_dependencies(vulkan_beginner shaders_compilation)
