--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,33 +16,45 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-set(COMPILLER_COMMON_FLAGS "-fPIC -Wall -Wpedantic -Werror -pedantic-errors -Wno-format-security -Wno-unused-label")
-if (ENABLE_SANITAIZE)
-    set(COMPILLER_COMMON_FLAGS "${COMPILLER_COMMON_FLAGS} -fsanitize=address -fsanitize=undefined -fno-sanitize=alignment -fsanitize=leak")
-endif()
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    set(COMPILLER_COMMON_FLAGS "-fPIC -Wall -Wpedantic -Werror -pedantic-errors -Wno-format-security -Wno-unused-label")
+    
+    if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+        set(CMAKE_CXX_FLAGS "-stdlib=libc++")
+        set(COMPILLER_COMMON_FLAGS "${COMPILLER_COMMON_FLAGS} -Wno-null-pointer-arithmetic") 
+    endif()
+    
+    if (ENABLE_SANITAIZE)
+        set(COMPILLER_COMMON_FLAGS "${COMPILLER_COMMON_FLAGS} -fsanitize=address -fsanitize=undefined -fno-sanitize=alignment -fsanitize=leak")
+    endif()
 
-set(DEBUG_GCC_COMPILER_FLAGS "${COMPILLER_COMMON_FLAGS} -DVALIDATION_LAYERS -DDEBUG -g3 -O0 -fstack-protector-all -fno-omit-frame-pointer -fno-optimize-sibling-calls")
-set(RELEASE_GCC_COMPILER_FLAGS "${COMPILLER_COMMON_FLAGS} -DNDEBUG -g0 -O3")
-set(CMAKE_C_FLAGS "-std=c99")
-set(CMAKE_C_FLAGS_DEBUG ${DEBUG_GCC_COMPILER_FLAGS})
-set(CMAKE_C_FLAGS_RELEASE ${RELEASE_GCC_COMPILER_FLAGS})
-set(CMAKE_CXX_FLAGS_DEBUG ${DEBUG_GCC_COMPILER_FLAGS})
-set(CMAKE_CXX_FLAGS_RELEASE ${RELEASE_GCC_COMPILER_FLAGS})
-add_definitions(-D${PLATFORM_TYPE})
+    set(DEBUG_GCC_COMPILER_FLAGS "${COMPILLER_COMMON_FLAGS} -DVALIDATION_LAYERS -DDEBUG -g3 -O0 -fstack-protector-all -fno-omit-frame-pointer -fno-optimize-sibling-calls")
+    set(RELEASE_GCC_COMPILER_FLAGS "${COMPILLER_COMMON_FLAGS} -DNDEBUG -g0 -O3")
+    set(CMAKE_C_FLAGS "-std=c99")
+    set(CMAKE_C_FLAGS_DEBUG ${DEBUG_GCC_COMPILER_FLAGS})
+    set(CMAKE_C_FLAGS_RELEASE ${RELEASE_GCC_COMPILER_FLAGS})
+    set(CMAKE_CXX_FLAGS_DEBUG ${DEBUG_GCC_COMPILER_FLAGS})
+    set(CMAKE_CXX_FLAGS_RELEASE ${RELEASE_GCC_COMPILER_FLAGS})
+    add_definitions(-D${PLATFORM_TYPE})
+elseif(MSVC)
+    set(SDL2_DIR ${CMAKE_SOURCE_DIR}/deps/SDL2/cmake)
+    set(RELEASE_MSVC_COMPILER_FLAGS "/O2 /Ot /Ob2")
+    set(CMAKE_C_FLAGS_RELEASE ${RELEASE_MSVC_COMPILER_FLAGS})
+    set(CMAKE_CXX_FLAGS_RELEASE ${RELEASE_MSVC_COMPILER_FLAGS})
+    set(CMAKE_C_FLAGS_DEBUG "-DVALIDATION_LAYERS")
+    set(CMAKE_CXX_FLAGS_DEBUG "-DVALIDATION_LAYERS")
+    add_definitions(/fp:fast /W3 /D_CRT_SECURE_NO_WARNINGS /D_SCL_SECURE_NO_WARNINGS /D${PLATFORM_TYPE})
+endif()
 
 set(SHADERS_DIR ${CMAKE_SOURCE_DIR}/shaders)
 set(SHADERS_OUTPUT_DIR ${CMAKE_BINARY_DIR}/shaders/)
 file(MAKE_DIRECTORY "${SHADERS_OUTPUT_DIR}")
 
-find_package(Vulkan COMPONENTS glslc volk)
+find_package(Vulkan COMPONENTS glslc)
 find_package(SDL2 REQUIRED)
 
 if (NOT Vulkan_FOUND)
     message(FATAL_ERROR "Vulkan is not found")
-endif()
-
-if (NOT Vulkan_volk_FOUND)
-    message(FATAL_ERROR "Volk is not found")
 endif()
 
 if (NOT Vulkan_glslc_FOUND)
@@ -80,7 +92,7 @@ macro(add_shader shader_name)
 endmacro()
 
 macro(add_sample sample_name)
-    add_executable(${sample_name} ${sample_name}.c common.c shader_io.c /usr/include/volk.c)
+    add_executable(${sample_name} ${sample_name}.c common.c shader_io.c volk/volk.c)
     # Include directories for the Vulkan and Vulkan validation layers
     # libraries
     # We include the Vulkan and Vulkan validation layers include directories
